# gpu-orderbook-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_cancel  benchmark_insert  benchmark_match  benchmark_run  download_lobster.py  run_benchmarks.sh  test_cancel  test_edge_cases  test_matching
benchmark/: BenchmarkUtils.cpp  BenchmarkUtils.h  CMakeLists.txt  benchmark_cancel.cpp  benchmark_insert.cpp  benchmark_match.cpp  workloads.h
data/: sample.csv
docs/: DesignDecisions.md  Design_Decisions.md
include/: Order.h  OrderBook.h  Types.h
include/backtest/: BacktestReport.h  Backtester.h  StatisticsCollector.h
include/dispatcher/: OrderDispatcher.h
include/execution/: ExecutionEngine.h  Fill.h  IFillListener.h  ITradeListener.h  Trade.h
include/handlers/: LimitHandler.h  MarketHandler.h
include/marketdata/: LOBSTEROrderBookReader.h  LOBSTERReader.h  LOBSTERValidator.h  OrderBookSnapshot.h
include/performance/: BenchmarkResult.h  BenchmarkRunner.h  ReportPrinter.h  Timer.h
include/portfolio/: Portfolio.h
include/replay/: Event.h  IEventListener.h  ReplayEngine.h  ReplayStatistics.h
include/replay/readers/: CSVReader.h  IEventReader.h  SyntheticReader.h
include/risk/: RiskEngine.h
include/strategy/: IStrategy.h  PassiveBuyer.h
src/: CMakeLists.txt  OrderBook.cpp  main.cpp
src/backtest/: Backtester.cpp  StatisticsCollector.cpp
src/dispatcher/: OrderDispatcher.cpp
src/execution/: ExecutionEngine.cpp
src/handlers/: LimitHandler.cpp  MarketHandler.cpp
src/marketdata/: LOBSTEROrderBookReader.cpp  LOBSTERReader.cpp  LOBSTERValidator.cpp  OrderBookSnapshot.cpp
src/performance/: BenchmarkRunner.cpp  ReportPrinter.cpp  Timer.cpp
src/portfolio/: Portfolio.cpp
src/replay/: ReplayEngine.cpp  ReplayStatistics.cpp
src/replay/readers/: CSVReader.cpp  SyntheticReader.cpp
src/risk/: RiskEngine.cpp
src/strategy/: PassiveBuyer.cpp
tests/: CMakeLists.txt  testFramework.h  test_backtester.cpp  test_cancel.cpp  test_csv_cancel.cpp  test_csv_parser_validation.cpp  test_csv_reader.cpp  test_csv_replay.cpp  test_edge_cases.cpp  test_execution_engine.cpp  test_iceberg.cpp  test_lobster_reader.cpp  test_lobster_replay.cpp  test_lobster_step_validation.cpp  test_lobster_validation.cpp  test_lobster_validator.cpp  test_matching.cpp  test_pnl.cpp  test_portfolio.cpp  test_replay.cpp  test_risk.cpp  test_strategy.cpp  test_trade_listener.cpp
tests/data/: malformed_event.csv  sample_cancel.csv
